--- a/css/style.css
+++ b/css/style.css
@@ -10,7 +10,7 @@ body {
     margin: auto;
     background-color: #fff;
     padding: 20px;
-    padding-top: 150px;
+    padding-top: 100px;
     border-radius: 8px;
     box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
 }
@@ -51,7 +51,7 @@ nav {
   top: 0%;
   width: 100%;
   position: fixed;
-  background-color: #007bce;
+  background-color: #4caf50;
 }
 .navbar {
   margin: 0 auto;
@@ -79,7 +79,7 @@ nav {
 }
 .navbar p{
 margin-bottom: 16px;
-color: #fc0;
+color: black;
 font-weight: 700;
 font-size: 20px;
 }
